# pong-amethyst

./: Cargo.toml  README.md
assets/texture/: button.aseprite  button.ron  logo.aseprite  logo.ron
config/: bindings.ron  display.ron
src/: audio.rs  core.rs  lib.rs  main.rs  states.rs  systems.rs
src/states/: game_over.rs  pause.rs  playing.rs  settings.rs  welcome.rs
src/systems/: bounce.rs  fps.rs  move_balls.rs  paddle.rs  score.rs  winner.rs
