[package]
name = "pong"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[dependencies.amethyst]
version = "0.15"
git = "https://github.com/amethyst/amethyst"
rev = "2535a065fb34234a1e5b74c4da5717d1dcdce6ca"
default-features = false
features = ["vulkan", "audio"]

[profile.release]
lto = true
