[package]
name = "pong"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[dependencies.amethyst]
version = "0.15"
# git = "https://github.com/amethyst/amethyst"
git = "https://github.com/fosskers/amethyst"
rev = "41440b90c73fbab27f8190a799e06f18fa9ee9bd"
default-features = false
features = ["vulkan", "audio"]

[profile.release]
lto = true
