[package]
name = "pong"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[dependencies.amethyst]
version = "0.15"
git = "https://github.com/amethyst/amethyst"
rev = "bb912d99f92a54f62626d509bb79ac9fd79309fa"
default-features = false
features = ["vulkan", "audio"]

[profile.release]
lto = true
